<resources>
    <string name="app_name">AluraViagens</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="banner">Banner inicial dos pacotes</string>
    <string name="banner_imagem_pacote">Banner imagem pacote</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="imagem_do_pacote">Imagem do pacote</string>
    <string name="digitosAceitosNoNomeCartao">"abcdefghijklmnopqrstuvxwyzABCDEFGHIJKLMNOPQRSTUVXWYZçÇ "</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valorCompra">Valor da compra:</string>
    <string name="mascara_MesCartao">MM</string>
    <string name="mascara_AnoCartao">AA</string>
    <string name="mascara_CVCCartao">CVC</string>
    <string name="nomeCartao">Nome no cartão</string>
    <string name="finalizarCompra">Finalizar Compra</string>
    <string name="numeroCartao">Número do cartão</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="parabens">Parabens!</string>
    <string name="banner_inicial_da_tela">Banner inicial da tela</string>
    <string name="foto_do_local">Foto do local</string>
</resources>