<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumoCompra_Banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/banner_inicial_da_tela"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/resumoCompra_Parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/resumoCompra_Realizada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resumoCompra_Realizada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/compra_realizada_com_sucesso"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/resumoCompra_Banner"
        app:layout_constraintEnd_toEndOf="@+id/resumoCompra_Parabens"
        app:layout_constraintStart_toStartOf="@+id/resumoCompra_Parabens"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resumoCompra_ConfiraResumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confira_o_resumo_da_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumoCompra_Banner" />

    <ImageView
        android:id="@+id/resumoCompra_imgPacote"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/foto_do_local"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumoCompra_ConfiraResumo"
        app:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumoCompra_LocalPacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumoCompra_imgPacote"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumoCompra_DataViagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="@+id/resumoCompra_LocalPacote"
        app:layout_constraintTop_toBottomOf="@+id/resumoCompra_LocalPacote"
        tools:text="08/12 - 10/12 de 2022" />

    <TextView
        android:id="@+id/resumoCompra_PrecoPacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumoCompra_DataViagem"
        app:layout_constraintTop_toBottomOf="@+id/resumoCompra_DataViagem"
        tools:text="R$ 243,99" />
</androidx.constraintlayout.widget.ConstraintLayout>